infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pathwaylens
  labels:
    name: pathwaylens
    app: pathwaylens
